# ecdis-client

./: .gitignore  .gitmodules  ecdis-client.cabal
app/: main.hs
app/JavaScript/: CssElementQueries.hs  SVG.hs
app/JavaScript/CssElementQueries/: Internal.hs
app/JavaScript/ECDIS/: GeneralWidgets.hs  Map.hs  SeaMap.hs  SystemClock.hs  Widget.hs
app/JavaScript/SVG/: Internal.hs
app_static/: index.html
app_static/css/: main.css
src/Data/Geo/: AlphaBeta.hs  Math.hs  TransverseMercator.hs  TraverseMercator.hs  UTM.hs
src/Wavecore/: ECDIS.hs
src/Wavecore/ECDIS/: Clock.hs  Controller.hs  ECDIS.hs  INS.hs  Internal.hs  Map.hs  SeaMap.hs  Types.hs
